Bug 142785 - UI Enabling hidden Writer header/footer works unreliably
Summary: UI Enabling hidden Writer header/footer works unreliably
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.2.0 target:25.8.2 target:25...
Keywords: implementationError
Depends on:
Blocks: DOCX-Header-Footer
  Show dependency treegraph
 
Reported: 2021-06-11 08:32 UTC by NISZ LibreOffice Team
Modified: 2025-10-08 12:14 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
attachment 86234 after enabling the hidden footer, then the hidden header - good (71.79 KB, image/png)
2021-06-11 08:32 UTC, NISZ LibreOffice Team
Details
attachment 86234 after enabling the hidden header, then the hidden footer - bad (71.51 KB, image/png)
2021-06-11 08:33 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-06-11 08:32:33 UTC
Created attachment 172798 [details]
attachment 86234 [details] after enabling the hidden footer, then the hidden header - good

This is a followup to bug #69635
When a Word document with hidden header/footer of even page type is opened, enabling both the header/footer sometimes does not work.

Steps to reproduce:
1.	Open attachment 86234 [details] 
2.	Go to Format – Page Style - Header
3.	Uncheck “Same content on left and right pages”
4.	Press Apply. The second pages header is changed to the green “EVEN header”
5.	Go to the Footer tab in the same dialog
6.	Uncheck “Same content on left and right pages”
7.	Press Apply. The second pages footer does NOT change to the green “EVEN header”
8.	Reload the file
9.	Go to Format – Page Style – Footer 
10.	Uncheck “Same content on left and right pages”
11.	Press Apply. The second pages footer now DOES change to the green “EVEN header”
12.	Go to the Header tab
13.	Uncheck “Same content on left and right pages”
14.	Press Apply. The second pages header is changed to the green “EVEN header”

Actual results:
As above.

Expected results:
The second pages hidden header/footer changes regardless of the order of turning off the “Same content on left and right pages” checkbox.

LibreOffice details:
Version: 7.2.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: aa9cb8e14749e7fb7a83b55a2bb095501f731a18
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-06-11 08:33:14 UTC
Created attachment 172799 [details]
attachment 86234 [details] after enabling the hidden header, then the hidden footer - bad
Comment 2 Dieter 2021-06-27 10:49:32 UTC
I confirm it with

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 949658028e722e5d2657b503eb20e16e41dbd8cf
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 3 QA Administrators 2023-06-28 03:13:07 UTC Comment hidden (obsolete)
Comment 4 Dieter 2023-07-31 18:35:43 UTC
Still present in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 42f0422d19c4d0a2fb09654fb6d1d92e50f6dd5c
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded
Comment 5 QA Administrators 2025-07-31 03:13:45 UTC Comment hidden (obsolete)
Comment 6 Dieter 2025-08-31 11:33:33 UTC
still present in

Version: 25.8.0.4 (X86_64)
Build ID: 48f00303701489684e67c38c28aff00cd5929e67
CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded
Comment 7 Justin L 2025-09-08 19:37:24 UTC
repro 26.2+ with "First and Even Header and Footer Turned Off [public].docx"

When starting with "Header", then "Footer" cannot be recovered.

OOo 3.3 wrongly starts with "different content left and right".
LO 3.6.7 shows both red and green text at the same time...
LO 4.4 - didn't recover the "hidden" right footer.
LO 7.2 - first time "hidden" right footer could be recovered at all.

Thus it started in 7.2 with commit b802ab694a8a7357d4657f3e11b571144fa7c7bf
Author: Attila Bakos (NISZ) on Fri Mar 12 14:33:08 2021 +0100
    tdf#141158 DOCX: import discarded headers/footers
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/112580
Comment 8 Commit Notification 2025-09-11 13:48:26 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0bcce63a97e0d51638746267e11c7a8f4936c9e2

tdf#142785 stashedFooter: fix copy/paste error

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-09-11 18:13:01 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/abdfd11e6b0dc814190e13a24bb78479a871aca2

tdf#142785 stashedFooter: fix copy/paste error

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-09-12 18:28:06 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/48d81a28f08314628616d12b487229eb445486dd

tdf#142785: sw: Add UItest

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-10-08 12:14:08 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/3a7f90c992e3235c9974099990ae4e33fc291da0

tdf#142785 stashedFooter: fix copy/paste error

It will be available in 25.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.