tdf#142785 stashedFooter: fix copy/paste error

Change-Id: I1455420a9bc8566648aee8972b47e0408e1255da
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190811
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
(cherry picked from commit 0bcce63a97e0d51638746267e11c7a8f4936c9e2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190819
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit abdfd11e6b0dc814190e13a24bb78479a871aca2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190878
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>